Adjust banner styling to avoid wrapping text unnecessarily
The max-width rule caused text content spanning much less than the available width to wrap anyway.

--- a/assets/stylesheets/banner.scss
+++ b/assets/stylesheets/banner.scss
@@ -71,8 +71,7 @@
 	}
 
 	.wcs-nux__notice-content-text {
-		max-width: 90%;
-		margin: 0 0 1em;
+		margin: 0 2.5em 1em 0;
 		line-height: 1.6;
 		padding: 0;
 	}
